--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,9 +13,18 @@
 #   url = "#publications"
 #   weight = 40
 
+[[main]]
+  name = "Publications"
+  url = "#featured"
+  weight = 40
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
 [[main]]
    name = "CV"
    url = "media/cv.pdf"
    weight = 70
+
+ [[main]]
+    name = "Posts"
+    url = "#post"
+    weight = 50
