--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -21,7 +21,7 @@
 # To enable, copy your resume/CV to `static/media/cv.pdf` and uncomment the lines below.
 [[main]]
    name = "CV"
-   url = "media/cv.pdf"
+   url = "media/resume.pdf"
    weight = 70
 
  [[main]]
